--- a/app/views/books/_book.html.haml
+++ b/app/views/books/_book.html.haml
@@ -1,16 +1,20 @@
-.book-content  
-  .single-box{ :style => "background-image: url(#{book.image})" } 
-  .status
-    %ul
-      %li Title
-      %a #{book.title} 
-      %li  Genre
-      %a #{book.genre}
-      %li  Author
-      %a #{book.author}
-      %li
-        Reviewer
-        = link_to "#{book.user.nickname}", user_path(book.id), method: :get, class:"mypage"
+.wrapper
+  .book-content
+    .single-box{ :style => "background-image: url(#{book.image})" } 
+    .status
+      %ul
+        %li Title
+        %a #{book.title} 
+        %li  Genre
+        %a #{book.genre}
+        %li  Author
+        %a #{book.author}
+        %li
+          Reviewer
+          - if user_signed_in?
+            = link_to "#{book.user.nickname}", user_path(book.id), method: :get, class:"mypage"
+          - else
+            %a.single_a #{book.user.nickname}
 
-.link-show
-  = link_to "詳細", book_path(book.id), method: :get
+/ .link-show
+/   = link_to "詳細", book_path(book.id), method: :get
