--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,36 +1,65 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-    - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+.edit-date
+  .edit-detail
+  .edit-profile
+    %h2
+      Edit #{resource_name.to_s.humanize}
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      = devise_error_messages!
+      .field
+        = f.label :email
+        %br/
+        = f.email_field :email, autofocus: true
+      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        %div
+          Currently waiting confirmation for: #{resource.unconfirmed_email}
+
+
+      .field
+        = f.label :nickname
+        %em (15 characters maximum)
+        %br/
+        = f.text_field :nickname, autofocus: true, maxlength: "15"
+
+
+      .field
+        = f.label :gender
+        %br/
+        = f.select :gender, [["男性", "man"], ["女性", "woman"], ["選択なし", "no_selection"]]
+
+
+      .field
+        = f.label :ages
+        %br/
+        = f.select :ages, [["10歳以下", "infant"], ["10代", "teens"], ["20代", "twenties"], ["30代", "thirties"], ["40代", "forties"], ["50代", "fifties"], ["60代", "sixties"], ["70代", "seventies"], ["80代", "eighties"], ["90代", "nineties"], ["100歳以上", "over_hundred"]]
+
+      .field
+        = f.label :occupation
+        %br/
+        = f.select :occupation, [["ビジネスパーソン", "ビジネスパーソン"], ["専門職", "専門職"], ["経営者", "経営者"], ["研究職", "研究職"], ["定年退職者", "定年退職者"], ["学生", "学生"], ["アーティスト", "アーティスト"], ["フリーター", "フリーター"], ["その他", "その他"]]
+
+
+      .field
+        = f.label :password
+        %i (leave blank if you don't want to change it)
+        %br/
+        = f.password_field :password, autocomplete: "off"
+        - if @minimum_password_length
+          %br/
+          %em
+            = @minimum_password_length
+            characters minimum
+      .field
+        = f.label :password_confirmation
+        %br/
+        = f.password_field :password_confirmation, autocomplete: "off"
+      .field
+        = f.label :current_password
+        %i (we need your current password to confirm your changes)
+        %br/
+        = f.password_field :current_password, autocomplete: "off"
+      .actions
+        = f.submit "Update"
+    %h3 Cancel my account
+    %p
+      Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
+    = link_to "Back", :back
