--- a/app/views/books/new.html.haml
+++ b/app/views/books/new.html.haml
@@ -5,7 +5,7 @@
       %input{name: "title", type:"text",}/
       %a Genre
       %select{name: "genre"}
-        %option{value: "マンガ"} マンガ
+        %option{value: "漫画"} マンガ
         %option{value: "小説"} 小説
         %option{value: "ビジネス"} ビジネス
         %option{value: "自己啓発本"} 自己啓発本
