--- a/app/views/reviews/index.html.haml
+++ b/app/views/reviews/index.html.haml
@@ -1,4 +1,4 @@
-.reviews
-  .contents
+.reviews-index
+  .reviews-box
     - @reviews.each do |review|
-      %p.word #{review.rate} 
+      %p.word #{review.text} 
