--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -33,6 +33,11 @@
         = f.select :occupation, [["ビジネスパーソン", "ビジネスパーソン"], ["専門職", "専門職"], ["経営者", "経営者"], ["研究職", "研究職"], ["定年退職者", "定年退職者"], ["学生", "学生"], ["アーティスト", "アーティスト"], ["フリーター", "フリーター"], ["その他", "その他"]]
 
       .field
+        = f.label : genre
+        %br/
+        = f.select :genre, [["漫画", "漫画"], ["小説", "小説"] , ["ビジネス", "ビジネス"], ["自己啓発", "自己啓発"], ["その他", "その他"]]
+
+      .field
         = f.label :password
         - if @minimum_password_length
           %em
