--- a/app/views/reviews/new.html.haml
+++ b/app/views/reviews/new.html.haml
@@ -1,10 +1,10 @@
 .post-content
   = form_for [@user, @review] do |f|
-    %div{:style => "margin: 8px 0"}
+    .evaluation{:style => "margin: 8px 0"}
       = f.label :評価, style: { 'margin-right' => 8 }
-      = f.number_field :rate, placeholder: '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' }
-    %div{:style => "margin: 8px 0"}
-      = f.text_area :text, placeholder: 'レビューを書いてね！', style: 'width: 100%;height: 300px;'
+      = f.number_field :rate, placeholder: '評価', value: 1, max: 5, min: 1, html: { class: "search__query", style: 'text-align: right;' }
+    .review-post{:style => "margin: 8px 0"}
+      = f.text_area :text, placeholder: 'レビューを書いてね！', style: 'width: 218px;height: 189px;'
     .row
       .col10.push1
         = button_tag type: "submit", class: "btn btn--block" do
