--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -142,7 +142,7 @@
 .user-review{
   width: 1000px;
   height: 750px;
-  background-image: url("https://cdn.pixabay.com/photo/2017/07/02/21/34/notebook-2465914_1280.jpg");
+  background-image: url("notebook-2465914_1280.png");
   background-repeat:no-repeat;
   background-size: 980px auto;
   margin: auto;
