--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -11,7 +11,7 @@
   .result-content{
     // height:3000px;
     width:1270px;
-    background-image: url("https://cdn.pixabay.com/photo/2016/07/20/21/01/amsterdam-1531287_1280.jpg");
+    background-image: url("amsterdam-1531287_1280.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
