--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -23,7 +23,7 @@
     .wrapper{
       height:800px;
       width:1270px;
-      background-image: url("https://cdn.pixabay.com/photo/2016/07/20/21/01/amsterdam-1531287_1280.jpg");
+      background-image: url("amsterdam-1531287_1280.jpg");
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -179,7 +179,7 @@
 
   .middle-box{
       margin: auto;
-      background-image: url("https://cdn.pixabay.com/photo/2016/07/20/21/01/amsterdam-1531287_1280.jpg");
+      background-image: url("amsterdam-1531287_1280.jpg");
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed;
