--- a/app/assets/stylesheets/devise.css.scss
+++ b/app/assets/stylesheets/devise.css.scss
@@ -4,7 +4,7 @@
   height:700px;
   .sign-contents{
   height: 700px;
-  background-image: url("https://cdn.pixabay.com/photo/2016/07/20/21/01/amsterdam-1531287_1280.jpg");
+  background-image: url("amsterdam-1531287_1280.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
